src/types/tests/snapshots/tgbot__types__tests__file__send_voice_entities_vs_parse_mode.snap
---
source: src/types/tests/file.rs
expression: actual_form
---
Form {
    fields: {
        "voice": FormValue::Text(
            "file-id",
        ),
        "chat_id": FormValue::Text(
            "1",
        ),
        "parse_mode": FormValue::Text(
            "Markdown",
        ),
    },
}
