src/types/tests/snapshots/tgbot__types__tests__file__video-2.snap
---
source: src/types/tests/file.rs
expression: "Video::new(3, \"file-id\", \"file-unique-id\", 2, 1)"
---
{
  "duration": 3,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "height": 2,
  "width": 1
}
