src/types/tests/snapshots/tgbot__types__tests__file__video.snap
---
source: src/types/tests/file.rs
expression: "Video::new(3, \"file-id\", \"file-unique-id\", 2,\n1).with_cover([PhotoSize::new(\"cover-file-id\", \"cover-file-unique-id\", 24,\n24)]).with_thumbnail(PhotoSize::new(\"thumb-file-id\", \"thumb-file-unique-id\",\n24,\n24).with_file_size(1024)).with_file_name(\"File Name\").with_mime_type(\"video/mpeg\").with_file_size(10240).with_start_timestamp(20)"
---
{
  "duration": 3,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "height": 2,
  "width": 1,
  "cover": [
    {
      "file_id": "cover-file-id",
      "file_unique_id": "cover-file-unique-id",
      "height": 24,
      "width": 24
    }
  ],
  "file_name": "File Name",
  "file_size": 10240,
  "mime_type": "video/mpeg",
  "start_timestamp": 20,
  "thumbnail": {
    "file_id": "thumb-file-id",
    "file_unique_id": "thumb-file-unique-id",
    "height": 24,
    "width": 24,
    "file_size": 1024
  }
}
