src/types/tests/snapshots/tgbot__types__tests__file__video_note-2.snap
---
source: src/types/tests/file.rs
expression: "VideoNote::new(1234, \"file-id\", \"file-unique-id\", 124)"
---
{
  "duration": 1234,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "length": 124
}
