src/types/tests/snapshots/tgbot__types__tests__file__video_note.snap
---
source: src/types/tests/file.rs
expression: "VideoNote::new(1234, \"file-id\", \"file-unique-id\",\n124).with_thumbnail(PhotoSize::new(\"thumb-file-id\", \"thumb-file-unique-id\",\n24, 24).with_file_size(1024)).with_file_size(10240)"
---
{
  "duration": 1234,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "length": 124,
  "file_size": 10240,
  "thumbnail": {
    "file_id": "thumb-file-id",
    "file_unique_id": "thumb-file-unique-id",
    "height": 24,
    "width": 24,
    "file_size": 1024
  }
}
