src/types/tests/snapshots/tgbot__types__tests__file__voice-2.snap
---
source: src/types/tests/file.rs
expression: "Voice::new(500, \"file-id\", \"file-unique-id\")"
---
{
  "duration": 500,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id"
}
